<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ticket Droid</string>
    <string name="action_settings">Settings</string>
    <string name="TEST">test</string>
    <string name="dialog_title">New Ticket</string>
    <string name="ticket_code">Ticket Code</string>
    <string name="title_activity_landing_page">LandingPage</string>
    <string name="introText">TicketDroid was created to remove the physical ticket limitation for any event, allowing for a modern solution that utilises one of the most used devices on the planet. \n\nDesigned with simplicity and ease of use in mind, the application allows for the adding of tickets with a simple code entering system, which then adds the ticket to your account. After this you can access the ticket at any time and when you wish to use it for an event you can simply show the QR Code to a reader.</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Register</string>
    <string name="title_activity_login_page">LoginPage</string>
    <string name="forgotButton">Forgot Details?</string>
    <string name="emailText">Email Address</string>
    <string name="passwordText">Password</string>
    <string name="title_activity_register_page">RegisterPage</string>
    <string name="confirmPasswordText">Confirm Password</string>
    <string name="title_activity_ticket_list_page">TicketListPage</string>
    <string name="add_ticket_ab">Add Ticket</string>
    <string name="title_activity_ticket_pages">TicketPages</string>
    <string name="title_activity_ticket_page_main">TicketPageMain</string>
    <string name="get_started">To get started, log in using Facebook</string>
    <string name="app_id">352569724903085</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>