<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/emailText"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailAddress"
        android:layout_alignRight="@+id/emailAddress"
        android:layout_below="@+id/emailAddress"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/passwordText"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_alignRight="@+id/password"
        android:layout_below="@+id/password"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/confirmPasswordText"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/confirmPassword"
        android:layout_marginBottom="19dp"
        android:layout_marginRight="26dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/registerButton"
        android:textColor="#3F51B5"
        android:onClick="attemptRegister" />

</RelativeLayout>