<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
 	android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.trout.ticketdroid.LoginPage" >
    
        <Button
        android:id="@+id/forgotButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="31dp"
        android:layout_marginLeft="20dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/forgotButton" />

    <EditText
        android:id="@+id/emailaddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:hint="@string/emailText"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailaddress"
        android:layout_alignRight="@+id/emailaddress"
        android:layout_below="@+id/emailaddress"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/passwordText"
        android:inputType="textPassword" >

    </EditText>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/forgotButton"
        android:layout_alignBottom="@+id/forgotButton"
        android:layout_alignRight="@+id/password"
        android:layout_marginRight="21dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/loginButton"
        android:onClick="attemptLogin"
        android:textColor="#3F51B5" />

</RelativeLayout>
